idf_component_register(SRCS "main.c" 
                            "wifi.c" 
                            "defines.h" 
                            "mdns_service.c"
                            "batsignal_server.c"
                            "lamp.c"
                            "led_strip_encoder.c"
                    INCLUDE_DIRS "")
