idf_component_register(SRCS "batsignal_client.c" "main.c" 
                            "wifi.c" 
                            "defines.h" 
                            "mdns_service.c"
                            "batsignal_server.c"
                            "batsignal_client.c"
                            "lamp.c"
                            "led_strip_encoder.c"
                    INCLUDE_DIRS "")
